exports[`test renders ./components/checkbox/demo/basic.md correctly 1`] = `
<label
  class="ant-checkbox-wrapper">
  <span
    class="ant-checkbox">
    <span
      class="ant-checkbox-inner" />
    <input
      class="ant-checkbox-input"
      type="checkbox" />
  </span>
  <span>
    Checkbox
  </span>
</label>
`;

exports[`test renders ./components/checkbox/demo/check-all.md correctly 1`] = `
<div>
  <div
    style="border-bottom:1px solid #E9E9E9;">
    <label
      class="ant-checkbox-wrapper">
      <span
        class="ant-checkbox-indeterminate ant-checkbox">
        <span
          class="ant-checkbox-inner" />
        <input
          class="ant-checkbox-input"
          type="checkbox" />
      </span>
      <span>
        Check all
      </span>
    </label>
  </div>
  <br />
  <div
    class="ant-checkbox-group">
    <label
      class="ant-checkbox-group-item ant-checkbox-wrapper">
      <span
        class="ant-checkbox ant-checkbox-checked ant-checkbox-checked-1">
        <span
          class="ant-checkbox-inner" />
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox" />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ant-checkbox-group-item ant-checkbox-wrapper">
      <span
        class="ant-checkbox">
        <span
          class="ant-checkbox-inner" />
        <input
          class="ant-checkbox-input"
          type="checkbox" />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ant-checkbox-group-item ant-checkbox-wrapper">
      <span
        class="ant-checkbox ant-checkbox-checked ant-checkbox-checked-1">
        <span
          class="ant-checkbox-inner" />
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox" />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
</div>
`;

exports[`test renders ./components/checkbox/demo/controller.md correctly 1`] = `
<div>
  <p
    style="margin-bottom:20px;">
    <label
      class="ant-checkbox-wrapper">
      <span
        class="ant-checkbox ant-checkbox-checked ant-checkbox-checked-1">
        <span
          class="ant-checkbox-inner" />
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox" />
      </span>
      <span>
        Checked-Enabled
      </span>
    </label>
  </p>
  <p>
    <button
      class="ant-btn ant-btn-primary ant-btn-sm"
      type="button">
      <span>
        Uncheck
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary ant-btn-sm"
      style="margin-left:10px;"
      type="button">
      <span>
        Disable
      </span>
    </button>
  </p>
</div>
`;

exports[`test renders ./components/checkbox/demo/disabled.md correctly 1`] = `
<div>
  <label
    class="ant-checkbox-wrapper">
    <span
      class="ant-checkbox ant-checkbox-disabled">
      <span
        class="ant-checkbox-inner" />
      <input
        class="ant-checkbox-input"
        disabled=""
        type="checkbox" />
    </span>
  </label>
  <br />
  <label
    class="ant-checkbox-wrapper">
    <span
      class="ant-checkbox ant-checkbox-checked ant-checkbox-checked-1 ant-checkbox-disabled">
      <span
        class="ant-checkbox-inner" />
      <input
        checked=""
        class="ant-checkbox-input"
        disabled=""
        type="checkbox" />
    </span>
  </label>
</div>
`;

exports[`test renders ./components/checkbox/demo/group.md correctly 1`] = `
<div>
  <div
    class="ant-checkbox-group">
    <label
      class="ant-checkbox-group-item ant-checkbox-wrapper">
      <span
        class="ant-checkbox ant-checkbox-checked ant-checkbox-checked-1">
        <span
          class="ant-checkbox-inner" />
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox" />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ant-checkbox-group-item ant-checkbox-wrapper">
      <span
        class="ant-checkbox">
        <span
          class="ant-checkbox-inner" />
        <input
          class="ant-checkbox-input"
          type="checkbox" />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ant-checkbox-group-item ant-checkbox-wrapper">
      <span
        class="ant-checkbox">
        <span
          class="ant-checkbox-inner" />
        <input
          class="ant-checkbox-input"
          type="checkbox" />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
  <br />
  <div
    class="ant-checkbox-group">
    <label
      class="ant-checkbox-group-item ant-checkbox-wrapper">
      <span
        class="ant-checkbox">
        <span
          class="ant-checkbox-inner" />
        <input
          class="ant-checkbox-input"
          type="checkbox" />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ant-checkbox-group-item ant-checkbox-wrapper">
      <span
        class="ant-checkbox ant-checkbox-checked ant-checkbox-checked-1">
        <span
          class="ant-checkbox-inner" />
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox" />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ant-checkbox-group-item ant-checkbox-wrapper">
      <span
        class="ant-checkbox">
        <span
          class="ant-checkbox-inner" />
        <input
          class="ant-checkbox-input"
          type="checkbox" />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
  <br />
  <div
    class="ant-checkbox-group">
    <label
      class="ant-checkbox-group-item ant-checkbox-wrapper">
      <span
        class="ant-checkbox ant-checkbox-checked ant-checkbox-checked-1 ant-checkbox-disabled">
        <span
          class="ant-checkbox-inner" />
        <input
          checked=""
          class="ant-checkbox-input"
          disabled=""
          type="checkbox" />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="ant-checkbox-group-item ant-checkbox-wrapper">
      <span
        class="ant-checkbox ant-checkbox-disabled">
        <span
          class="ant-checkbox-inner" />
        <input
          class="ant-checkbox-input"
          disabled=""
          type="checkbox" />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="ant-checkbox-group-item ant-checkbox-wrapper">
      <span
        class="ant-checkbox">
        <span
          class="ant-checkbox-inner" />
        <input
          class="ant-checkbox-input"
          type="checkbox" />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
</div>
`;
